--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "socket.io": "^4.1.3"
-  }
+    "socket.io": "^4.1.3",
+    "leaflet": "^1.7.1"
+}
 }
